src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* Typography */
  --font-sans: 'Lexend', sans-serif;

  /* colors */
  --color-white: #ededed;
  --color-black: #12161d;
  --color-text: #333333;
  --color-border: rgba(0, 0, 0, 0.1);
}

@layer base {
  html {
    @apply antialiased;
  }
  
  body {
    @apply bg-[var(--color-white)] text-[var(--color-text)];
    font-family: var(--font-sans);
    font-weight: 300;
  }
}

@layer components {
  .container {
    @apply mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl;
  }
}

/* Dark mode styles */
:root.dark {
  --color-white: #12161d;
  --color-text: #ffffff;
  --color-border: rgba(255, 255, 255, 0.1);
}

/* Border colors */
.border-t, .border-b, .border-l, .border-r, .border, .divide-y > * {
  border-color: var(--color-border);
}

.divide-y > * + * {
  border-top-color: var(--color-border);
}

/* Code block styles */
:root {
  --astro-code-color-text: theme(colors.zinc.900);
  --astro-code-background: theme(colors.zinc.100);
  --astro-code-token-punctuation: theme(colors.zinc.800);
  --astro-code-token-parameter: theme(colors.zinc.900);
  --astro-code-token-line-number: theme(colors.zinc.500);
  --astro-code-token-comment: theme(colors.zinc.400);
  --astro-code-token-cdata: theme(colors.zinc.900);
  --astro-code-token-constant: theme(colors.blue.500);
  --astro-code-token-function: theme(colors.blue.600);
  --astro-code-token-attr-name: theme(colors.blue.700);
  --astro-code-token-builtin: theme(colors.blue.400);
  --astro-code-token-boolean: theme(colors.blue.500);
  --astro-code-token-class-name: theme(colors.blue.700);
  --astro-code-token-property: theme(colors.blue.500);
  --astro-code-token-selector: theme(colors.blue.600);
  --astro-code-token-string: theme(colors.emerald.600);
  --astro-code-token-string-expression: theme(colors.blue.500);
  --astro-code-token-variable: theme(colors.sky.500);
  --astro-code-token-keyword: theme(colors.sky.700);
  --astro-code-token-symbol: theme(colors.sky.600);
  --astro-code-token-number: theme(colors.sky.500);
  --astro-code-token-operator: theme(colors.sky.700);
  --astro-code-token-deleted: theme(colors.sky.800);
  --astro-code-token-changed: theme(colors.sky.400);
  --astro-code-token-important: theme(colors.sky.600);
  --astro-code-token-tag: theme(colors.teal.600);
  --astro-code-token-inserted: theme(colors.teal.400);
  --astro-code-token-namespace: theme(colors.teal.600);
  --astro-code-token-atrule: theme(colors.teal.500);
  --astro-code-token-entity: theme(colors.teal.500);
  --astro-code-token-highlight: theme(colors.amber.500);
  --astro-code-token-alert: theme(colors.amber.600);
  --astro-code-token-emphasis: theme(colors.amber.400);
  --astro-code-token-focus: theme(colors.amber.700);
  --astro-code-token-notice: theme(colors.amber.600);
  --astro-code-token-attr-value: theme(colors.blue.700);
  --astro-code-token-regex: theme(colors.blue.500);
  --astro-code-token-doctype: theme(colors.zinc.500);
  --astro-code-token-prolog: theme(colors.zinc.400);
  --astro-code-token-bold: inherit;
  --astro-code-token-italic: italic;
  --astro-code-token-underline: underline;
}

:root.dark {
  --astro-code-color-text: theme(colors.zinc.300);
  --astro-code-background: #ffffff05;
  --astro-code-token-punctuation: theme(colors.zinc.400);
  --astro-code-token-parameter: theme(colors.zinc.300);
  --astro-code-token-line-number: theme(colors.zinc.500);
  --astro-code-token-comment: theme(colors.zinc.500);
  --astro-code-token-cdata: theme(colors.zinc.300);
  --astro-code-token-constant: theme(colors.blue.400);
  --astro-code-token-function: theme(colors.blue.500);
  --astro-code-token-attr-name: theme(colors.blue.400);
  --astro-code-token-builtin: theme(colors.blue.300);
  --astro-code-token-boolean: theme(colors.blue.400);
  --astro-code-token-class-name: theme(colors.blue.300);
  --astro-code-token-property: theme(colors.blue.400);
  --astro-code-token-selector: theme(colors.blue.500);
  --astro-code-token-string: theme(colors.emerald.400);
  --astro-code-token-string-expression: theme(colors.blue.400);
  --astro-code-token-variable: theme(colors.sky.400);
  --astro-code-token-keyword: theme(colors.sky.300);
  --astro-code-token-symbol: theme(colors.sky.400);
  --astro-code-token-number: theme(colors.sky.400);
  --astro-code-token-operator: theme(colors.sky.300);
  --astro-code-token-deleted: theme(colors.sky.300);
  --astro-code-token-changed: theme(colors.sky.300);
  --astro-code-token-important: theme(colors.sky.400);
  --astro-code-token-tag: theme(colors.teal.400);
  --astro-code-token-inserted: theme(colors.teal.300);
  --astro-code-token-namespace: theme(colors.teal.400);
  --astro-code-token-atrule: theme(colors.teal.400);
  --astro-code-token-entity: theme(colors.teal.400);
  --astro-code-token-highlight: theme(colors.amber.400);
  --astro-code-token-alert: theme(colors.amber.400);
  --astro-code-token-emphasis: theme(colors.amber.300);
  --astro-code-token-focus: theme(colors.amber.500);
  --astro-code-token-notice: theme(colors.amber.400);
  --astro-code-token-attr-value: theme(colors.blue.300);
  --astro-code-token-regex: theme(colors.blue.400);
  --astro-code-token-doctype: theme(colors.zinc.500);
  --astro-code-token-prolog: theme(colors.zinc.500);
}

